[tool.poetry]
name = "llm-agent-info-assistant"
version = "0.1.0"
description = ""
authors = ["kbr1218 <kbr_uni@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.4.3"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langchain-google-genai = "^2.1.4"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
