[tool.poetry]
name = "llm-agent-info-assistant"
version = "0.1.0"
description = ""
authors = ["kbr1218 <kbr_uni@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.4.3"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langchain-google-genai = "^2.1.4"
google-search-results = "^2.4.2"
streamlit = "^1.45.1"
langchain-google-community = {extras = ["places"], version = "^2.0.7"}
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
